<resources>
    <string name="app_name">CS TOOLS</string>

    <!--home-->
    <string name="network">Network</string>
    <string name="raid">Raid</string>
    <string name="download">Download</string>
    <string name="number_system">Number System</string>
    <string name="network_calculator">Network Calculator</string>
    <!--networkhome-->
    <string name="classless_subnetting">Classless Subnetting</string>
    <string name="eui_64">EUI-64</string>
    <string name="vlsm">VLSM</string>

    <string name="enter_device_mac_address">Enter Device MAC Address</string>
    <string name="oui">OUI</string>
    <string name="device_indentifier">Device Indentifier</string>
    <string name="enter">Enter</string>
    <string name="view">View</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="network_address">Network Address</string>
    <string name="amount_of_subnets">Amount of Subnets</string>
    <string name="em" />
    <string name="x" />



    <!--networksubnet-->
    <!--numbersystem-->
    <string name="textViewConverter">Number System Converter</string>
    <string name="enterNumber">Enter a Number</string>
    <string name="submitbtn">Convert</string>
    <string name="selectType">Select a Type</string>
    <string name="numberConverter">"Number Converter "</string>
    <string name="binary">Binary</string>
    <string name="decimal">Decimal</string>
    <string name="octal">Octal</string>
    <string name="hexadecimal">Hexa Decimal</string>


    <!--numbersystem-->

    <!--DTCal-->
    <string name="DTCal_Home_Name">Download Time \nCalculator</string>
    <string name="DTCal_FileSize">File Size</string>
    <string name="DTCal_Use">Use:</string>
    <string name="DTCal_Saved_Connection">Saved Connection and Speed</string>
    <string name="DTCal_New_Connection">New Connection and \n Speed</string>
    <string name="DTCal_Connection_Type">ConnectionType</string>
    <string name="DTCal_Connection_Speed">Download Speed</string>
    <string name="DTCal_Cancel">Cancel</string>
    <string name="DTCal_Calculate">Calculate</string>
    <string name="circle_background">backfroudcirlceimg</string>
    <string name="DTCal_CheckBoxCondition">Save my Connection type and speed for further\n calculations.</string>
    <string name="DTCal_DownloadTime">Your file\n will download\n in:</string>
    <string name="DTCal_Resultformat">(dd:hh:mm:ss)</string>
    <string name="DTCal_MyConnections">My Connection Types And \nSpeeds</string>
    <string name="history">History</string>



    <string-array name="File_sizes_array">
        <item>KB</item>
        <item>MB</item>
        <item>GB</item>
    </string-array>
    <string-array name="Connection_Types_array">
        <item>Modem</item>
        <item>ADSL</item>
        <item>LAN</item>
        <item>Turbo 3G</item>
        <item>4G</item>
    </string-array>
    <string-array name="Speed_array">
        <item>Kbps</item>
        <item>Mbps</item>
        <item>Gbps</item>
    </string-array>
    <!--DTCal-->


</resources>