<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_update"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DTCalNewConnectionActivity">

    <TextView
        android:id="@+id/txtFileSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="200dp"
        android:text="@string/DTCal_FileSize"
        android:textColor="@color/Font"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etxtFileSize"
        android:layout_width="85dp"
        android:layout_height="67dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/spinnerFileSize"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Spinner
        android:id="@+id/spinnerFileSize"
        android:layout_width="106dp"
        android:layout_height="78dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtConnectionType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/DTCal_Connection_Type"
        android:textColor="@color/Font"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFileSize" />

    <TextView
        android:id="@+id/txtConnectionSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/DTCal_Connection_Speed"
        android:textColor="@color/Font"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConnectionType" />

    <MultiAutoCompleteTextView
        android:id="@+id/atxtConnectionSpeed"
        android:layout_width="89dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toStartOf="@+id/spinnerSpeed"
        app:layout_constraintTop_toBottomOf="@+id/spinnerConType" />

    <Spinner
        android:id="@+id/spinnerSpeed"
        android:layout_width="106dp"
        android:layout_height="62dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerConType" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/DTCal_CheckBoxCondition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConnectionSpeed" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:background="@color/appBar"
        android:text="@string/DTCal_Calculate"
        android:textColor="@color/apptitle"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/appBar"
        android:text="@string/DTCal_Cancel"
        android:textColor="@color/apptitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCalculate"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <Spinner
        android:id="@+id/spinnerConType"
        android:layout_width="123dp"
        android:layout_height="78dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtConnectionType"
        app:layout_constraintTop_toBottomOf="@+id/etxtFileSize" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="385dp"
        android:layout_height="106dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/DTCal_Home_Name"
        android:textColor="@color/apptitle"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>