<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".subEnFragment" >

    <FrameLayout
        android:id="@+id/frSubEn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radiusbutton"
                android:text="@string/enter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.845" />

            <LinearLayout
                android:id="@+id/linearsubdummyy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.26999998">

                <EditText
                    android:id="@+id/subnetNetworkAddress1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/x"
                    android:maxLength="3"
                    android:digits="0123456789"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/apptitle"
                    app:backgroundTint="@color/apptitle" />

                <EditText
                    android:id="@+id/subnetNetworkAddress2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/x"
                    android:maxLength="3"
                    android:digits="0123456789"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/apptitle"
                    app:backgroundTint="@color/apptitle" />

                <EditText
                    android:id="@+id/subnetNetworkAddress3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/x"
                    android:maxLength="3"
                    android:digits="0123456789"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/apptitle"
                    app:backgroundTint="@color/apptitle" />

                <EditText
                    android:id="@+id/subnetNetworkAddress4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/x"
                    android:maxLength="3"
                    android:digits="0123456789"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/apptitle"
                    app:backgroundTint="@color/apptitle" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvsna"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_address"
                android:textColor="@color/apptitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.22000003" />

            <TextView
                android:id="@+id/tvsas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_of_subnets"
                android:textColor="@color/apptitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/subnetAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/em"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:maxLength="10"
                android:digits="0123456789"
                android:textColor="@color/apptitle"
                app:backgroundTint="@color/apptitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.57" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>